# desafio_aiqfome_fastapi

./: .env.db  .gitignore  Dockerfile  README.md  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  test_main.py
app/: main.py  models.py  test_main.py
app/tests/: fixtures.py  test_main.py
